tests/transpiler/x/scala/nested_function.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/nested_function.scala:3: error: ':' expected but ')' found.
    def outer(x) = {
               ^
/workspace/mochi/tests/transpiler/x/scala/nested_function.scala:12: error: identifier expected but '}' found.
}
^
two errors found
