tests/transpiler/x/scala/nested_function.scala
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 19:51:39 GMT+7
object Main {
    def outer(x) = {
        def inner(y) = {
        (x + y)
    }
        inner(5)
    }
    def main(args: Array[String]): Unit = {
        println(outer(3))
    }
}
